--- a/lucterios/contacts/locale/fr/LC_MESSAGES/django.po
+++ b/lucterios/contacts/locale/fr/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-25 16:35+0000\n"
+"POT-Creation-Date: 2020-02-03 11:52+0000\n"
 "PO-Revision-Date: 2019-10-22 11:45+0200\n"
 "Last-Translator: b'Paul ARULATEDA <paul531@orange.fr>'\n"
 "Language-Team: \n"
@@ -541,12 +541,12 @@ msgstr "Ensemble d'outils de gestion génériques"
 msgid "Management of men or women and organizations saved."
 msgstr ""
 "Ensemble d'actions permettant la gestion de vos contacts:{[br/]}{[ul]}{[li]}"
-"Les personnes morales sont des groupements de personnes comme des associations "
-"ou des entreprises.{[li]}Les personnes physiques sont les êtres humains"
-" identifiés chacun par un nom et un prénom.{[l/i]}{[/ul]}Vous "
-"pouvez alors créer, consulter, modifier ou faire des recherches parmi ces "
-"fiches de contact.{[br/]}Notez que d'autres modules de l'application "
-"peuvent les utiliser ou les associer à d'autres données."
+"Les personnes morales sont des groupements de personnes comme des "
+"associations ou des entreprises.{[li]}Les personnes physiques sont les êtres "
+"humains identifiés chacun par un nom et un prénom.{[l/i]}{[/ul]}Vous pouvez "
+"alors créer, consulter, modifier ou faire des recherches parmi ces fiches de "
+"contact.{[br/]}Notez que d'autres modules de l'application peuvent les "
+"utiliser ou les associer à d'autres données."
 
 #: views_contacts.py:64
 msgid "Add legal entity"
@@ -569,8 +569,7 @@ msgid ""
 "Management of a structure or organization of people (company, association, "
 "administration, ...)"
 msgstr ""
-"Gestion d'une personne morale (entreprise, "
-"association, administration, ...)"
+"Gestion d'une personne morale (entreprise, association, administration, ...)"
 
 #: views_contacts.py:164
 msgid "Add individual"
