--- a/lucterios/contacts/locale/en/LC_MESSAGES/django.po
+++ b/lucterios/contacts/locale/en/LC_MESSAGES/django.po
@@ -2,20 +2,22 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Laurent Gay <l.gay@sd-libre.fr>, 2020.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-27 15:29+0000\n"
-"PO-Revision-Date: 2019-10-22 11:47+0200\n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2020-05-27 08:27+0000\n"
+"PO-Revision-Date: 2020-05-27 10:26+0200\n"
+"Last-Translator: Laurent Gay <l.gay@sd-libre.fr>\n"
+"Language-Team: français <>\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Gtranslator 2.91.7\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: __init__.py:42 views.py:475 views.py:486 views.py:525
 msgid "Lucterios contacts"
@@ -57,8 +59,7 @@ msgstr "Write to all"
 msgid "model"
 msgstr "model"
 
-#: models.py:44 models.py:308 models.py:325 models.py:486
-#: printmodel/LegalEntity_0001.py:38
+#: models.py:44 models.py:308 models.py:325 printmodel/LegalEntity_0001.py:38
 msgid "name"
 msgstr "name"
 
@@ -180,6 +181,10 @@ msgstr "generic contact"
 #: models.py:482
 msgid "generic contacts"
 msgstr "generic contacts"
+
+#: models.py:486
+msgid "denomination"
+msgstr "denomination"
 
 #: models.py:488
 msgid "identify number"
